--- a/src/styles/auth/_auth.scss
+++ b/src/styles/auth/_auth.scss
@@ -1,4 +1,5 @@
-@use '../variables' as *;
+@use '../abstract/variables' as *;
+@use '../abstract/mixins' as *;
 
 .auth {
   .title {
@@ -109,6 +110,81 @@
         text-decoration: underline;
         text-decoration-color: $accent;
         text-decoration-thickness: 2px;
+      }
+    }
+  }
+
+  &--container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    padding-inline: 1em;
+
+    // on tablet
+    @include tablet-up {
+      padding-inline: 2em;
+      margin: auto;
+      max-width: clamp(25em, 40em, 50em);
+    }
+
+    // on desktop
+    @include desktop {
+      flex-direction: row;
+      max-width: clamp(50em, 60em, 80em);
+      margin: auto;
+    }
+
+    .auth__card--container {
+      padding: 1em;
+      // shadow
+      box-shadow: $box-shadow-2;
+      background-color: darken($neutral, 5%);
+      border-radius: $border-radius;
+
+      > div:first-child {
+        margin-bottom: 2em;
+      }
+
+      @include desktop {
+        align-items: center;
+        display: flex;
+        height: 25em;
+        justify-content: space-between;
+        margin: auto;
+        width: 85%;
+
+        > div:first-child {
+          margin: 0;
+        }
+      }
+
+      > div {
+        align-items: stretch;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        height: 6.25em;
+        justify-content: space-around;
+        text-align: center;
+
+        // prevent overflow
+        height: max-content;
+
+        h2 {
+          font-size: 1.9rem;
+          line-height: 1.3;
+          font-weight: 500;
+        }
+
+        .btn {
+          background-color: transparent;
+          cursor: pointer;
+          font-size: 1.3rem;
+          padding: 0.5em 1em;
+          text-decoration: underline;
+          text-transform: uppercase;
+        }
       }
     }
   }
