feat: add more variables

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -5,11 +5,16 @@ $text: #191923;
 $accent: #ffbc42;
 $neutral: #f4f4f9;
 
+// box shadow
 $box-shadow-1: 8px 8px 28px 0px rgba(25, 25, 35, 0.39);
 $box-shadow-2: 8px 8px 28px 0px rgba(25, 25, 35, 0.19);
 $box-shadow-3: 8px 8px 49px -170px rgba(25, 25, 35, 0.09);
+$box-shadow-top-left: -2px 8px 29px 5px rgba(238, 66, 102, 0.1) inset;
 
+// border-radius
 $border-radius: 5px;
+
+// font-family
 $lato: 'Lato', sans-serif;
 $poppins: 'Poppins', sans-serif;
 
