feat: Header component style

--- a/src/styles/components/header/_header.scss
+++ b/src/styles/components/header/_header.scss
@@ -31,4 +31,18 @@
       margin-left: 0.5em;
     }
   }
+
+  .user-profile {
+    display: none;
+  }
+
+  @include desktop {
+    .user-profile {
+      display: block;
+    }
+
+    .menu {
+      display: none;
+    }
+  }
 }
