--- a/src/styles/components/home/_home.scss
+++ b/src/styles/components/home/_home.scss
@@ -51,7 +51,8 @@
     inset: 0;
     z-index: 20;
 
-    padding: 2em;
+    padding: 1em;
+    padding-top: 7rem;
 
     // hide from screen
     transform: translateX(100vw);
@@ -62,6 +63,60 @@
     box-shadow: $box-shadow-top-left;
 
     background-color: lighten($neutral, 5%) !important;
+
+    // sidebar content
+    .user-info {
+      background-color: lighten($secondary, 5%) !important;
+      border-radius: $border-radius;
+      box-shadow: $box-shadow-top-left;
+      display: flex;
+      flex-direction: column;
+      font-size: 1.4rem;
+      font-weight: 500;
+      gap: 1rem;
+      padding: 1em;
+      margin-bottom: 1em;
+      width: fit-content;
+
+      .username {
+        padding: 0.4em;
+        position: relative;
+        h2 {
+          position: relative;
+          width: 15ch;
+          z-index: 10;
+        }
+        span {
+          position: absolute;
+          inset: 0;
+
+          background-color: $accent !important;
+          // force size on empty span
+          width: 15ch;
+          height: 100%;
+          // slant
+          transform: skewY(-1deg);
+
+          border-bottom-right-radius: 20px;
+          border-top-left-radius: 20px;
+          border-left: 4px solid lighten($text, 10%);
+          border-right: 4px solid lighten($text, 10%);
+          box-shadow: $box-shadow-2;
+        }
+      }
+
+      .email {
+        font-size: 1.2rem;
+        line-height: 0.8;
+        font-style: oblique;
+        font-weight: 400;
+      }
+
+      @include desktop {
+        margin: auto;
+        margin-bottom: 1em;
+      }
+    }
 
     @include desktop {
       // override mobile and tablet styles
@@ -74,6 +129,7 @@
       grid-column: span 3;
       // reset the sidebar to origin
       transform: translateX(0);
+      padding-top: 2rem;
     }
   }
 }
