--- a/src/styles/abstract/_mixins.scss
+++ b/src/styles/abstract/_mixins.scss
@@ -6,12 +6,14 @@
   }
 }
 
-@mixin colorer {
-  background-color: red;
-}
-
 @mixin desktop {
   @media only screen and (min-width: $desktop) {
     @content;
+  }
+}
+
+@mixin hide-scrollbar {
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
