--- a/src/styles/components/home/_file-transfer.scss
+++ b/src/styles/components/home/_file-transfer.scss
@@ -10,6 +10,7 @@
       // make the card obvious on small screen
       margin: 1em;
       border: 1px solid $neutral;
+      border-radius: 1.2rem;
       box-shadow: $box-shadow-2;
 
       // center all the content
