--- a/src/styles/components/home/_file-transfer.scss
+++ b/src/styles/components/home/_file-transfer.scss
@@ -84,6 +84,33 @@
           padding: 0.3em;
         }
       }
+
+      .image-tag {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 1em 0;
+        margin-top: 2em;
+
+        .tag-input {
+          border: 1.5px solid darken($neutral, 5%);
+          padding: 0.3em !important;
+        }
+        .btn-addToList {
+          background-color: darken($neutral, 3%);
+          border: 1px solid darken($neutral, 4%);
+          border-radius: 10px;
+          box-shadow: $box-shadow-2;
+          cursor: pointer;
+          font-size: 1.3rem;
+          padding: 0.4em 0;
+          margin-top: 1rem;
+
+          &:hover {
+            background-color: darken($neutral, 5%);
+          }
+        }
+      }
     }
   }
 }
