--- a/src/styles/components/home/_users-details.scss
+++ b/src/styles/components/home/_users-details.scss
@@ -11,7 +11,9 @@
   }
 
   .receiver-details {
+    align-self: center;
     background-color: #fff;
+    max-height: 33vh;
 
     input {
       border: 3px solid $neutral;
