fix: tag input font-size

--- a/src/styles/components/home/_file-transfer.scss
+++ b/src/styles/components/home/_file-transfer.scss
@@ -97,6 +97,7 @@
         .tag-input {
           border: 1.5px solid darken($neutral, 5%);
           padding: 0.3em !important;
+          font-size: 1.1rem !important;
         }
         .btn-addToList {
           background-color: darken($neutral, 3%);
