feat: Display list of all files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,9 @@
 @use './components/header' as *;
 @use './components/auth' as *;
 @use './components/home' as *;
+@use './components/files' as *;
 @use './form' as *;
+@use './loading-animation' as *;
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
