--- a/src/styles/abstract/_resets.scss
+++ b/src/styles/abstract/_resets.scss
@@ -1,1 +1,7 @@
 @use './variables' as *;
+
+.error--custom {
+  padding-top: 2em !important;
+  text-align: center;
+  font-size: 1.7rem !important;
+}
