feat: display forgot page by default
- whene use hits '/auth/reset'

--- a/src/styles/components/auth/_auth.scss
+++ b/src/styles/components/auth/_auth.scss
@@ -193,5 +193,7 @@
 
 // push forgot password to the right
 .to-right {
-  transform: translateX(12rem) !important;
+  @include desktop {
+    transform: translateX(12rem) !important;
+  }
 }
