--- a/src/styles/components/files/_file.scss
+++ b/src/styles/components/files/_file.scss
@@ -4,12 +4,19 @@
   &__list {
     padding-top: 1rem;
 
+    @include tablet-up {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
     &--item {
       display: flex;
       flex-direction: column;
       align-items: center;
+      width: max-content;
+      background-color: darken($neutral, 5%);
+      padding: 1em;
       gap: 1rem;
-      max-width: 23.125rem;
+      // max-width: 23.125rem;
       margin: auto;
       font-size: 1.2rem;
 
@@ -26,6 +33,7 @@
       .info {
         display: flex;
         flex-direction: column;
+        width: max-content;
 
         // typography
         font-size: 1.2rem;
@@ -38,9 +46,12 @@
 
         // title
         .name {
-          padding: 0.5em;
-          max-width: 25ch;
-          text-overflow: ellipsis;
+          .name-desc {
+            padding: 0.5em;
+            max-width: 23ch;
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
 
           .title {
             color: lighten($text, 50%);
@@ -92,8 +103,7 @@
       }
 
       @include tablet-up {
-        flex-direction: row;
-        max-width: fit-content;
+        // max-width: fit-content;
       }
     }
   }
