--- a/src/styles/components/header/_header.scss
+++ b/src/styles/components/header/_header.scss
@@ -37,6 +37,60 @@
     display: none;
   }
 
+  .router {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: darken($neutral, 5%);
+    border-radius: $border-radius;
+    box-shadow: $box-shadow-2;
+    top: 6rem;
+    left: 0;
+    padding: 0.5em;
+    height: 10rem;
+    margin: 1em;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateY(-100vw);
+    transition: all;
+
+    > a {
+      border: 2px solid $secondary;
+      padding: 0.5em 1em;
+      border-radius: $border-radius;
+      align-self: stretch;
+      text-align: center;
+    }
+  }
+
+  .mobile {
+    transform: translateY(0);
+  }
+
+  @include tablet-up {
+    // resets
+    .router {
+      position: static;
+      transform: translate(0);
+      flex-direction: row;
+      height: unset;
+      background-color: transparent;
+      box-shadow: unset;
+      gap: 1rem;
+      text-transform: uppercase;
+      text-align: center;
+      transition: all 300ms ease-in-out;
+
+      > a {
+        width: 7rem;
+
+        &:hover {
+          background-color: $secondary;
+        }
+      }
+    }
+  }
+
   @include desktop {
     .user-profile,
     .router {
@@ -61,20 +115,6 @@
           color: white;
           padding: 0.5em 1em;
         }
-      }
-    }
-
-    .router > a {
-      padding: 0.5em 1em;
-      border-radius: $border-radius;
-      text-transform: uppercase;
-      border: 2px solid $secondary;
-      width: 7rem;
-      text-align: center;
-      transition: all 300ms ease-in-out;
-
-      &:hover {
-        background-color: $secondary;
       }
     }
 
