--- a/src/styles/components/files/_file.scss
+++ b/src/styles/components/files/_file.scss
@@ -13,7 +13,7 @@
       flex-direction: column;
       align-items: center;
       width: max-content;
-      background-color: darken($neutral, 5%);
+      background-color: darken(#fff, 2.5%);
       padding: 1em;
       gap: 1rem;
       // max-width: 23.125rem;
@@ -26,7 +26,7 @@
       }
 
       // card item
-      box-shadow: $box-shadow-2;
+      box-shadow: $box-shadow-3;
       border: 2px solid $neutral;
       border-radius: $border-radius;
 
