--- a/src/styles/abstract/_resets.scss
+++ b/src/styles/abstract/_resets.scss
@@ -5,3 +5,8 @@
   text-align: center;
   font-size: 1.7rem !important;
 }
+
+.loading-state-active {
+  opacity: 0.5;
+  transition: all ease-in 300ms;
+}
