feat: display user information

--- a/src/styles/components/home/_sidebar.scss
+++ b/src/styles/components/home/_sidebar.scss
@@ -39,6 +39,7 @@
       .username {
         padding: 0.4em;
         position: relative;
+        text-align: center;
 
         h2 {
           position: relative;
