--- a/src/styles/components/home/_sidebar.scss
+++ b/src/styles/components/home/_sidebar.scss
@@ -95,6 +95,7 @@
         padding: 0.5em;
         text-align: center;
         position: sticky;
+        z-index: 10;
         top: 0;
         background-color: transparent !important;
         backdrop-filter: blur(20px);
@@ -104,6 +105,10 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+
+        @include desktop {
+          margin-top: 0.5rem;
+        }
       }
 
       .file {
